# stablestar

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  output
src/: cart_pendulum.cpp  cart_pendulum.h  main.cpp  main.cu  pendulum.cpp  pendulum.h  pipeline.cu  pipeline.h
